2009-11-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Removed the commented out %define macro for
	our versionning. It seems that macro in comments are also interpreted. 

2009-11-20	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/UPGRADE, pf/packetfence.spec: Changed some default behavior for 
	overwriting config files (for the better)
	RPM spec version bump to snapshot 20091120

2009-11-19	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/node.pm, pf/lib/pf/trigger.pm, pf/lib/pf/util.pm,
	pf/lib/pf/violation.pm: Fixed POD doc so that test passes

	* pf/t/binaries.t: Fixed test case: we removed pfcmd_ap.pl

	* pf/t/log.conf, pf/t/pfcmd.t, pf/t/services.t: Tests are now using
	their own target logfile: logs/packetfence-tests.log

	* pf/t/all.t, pf/t/services.t: Added tests to check if snort starts 
	successfully and if pfdetect can bind to it

	* Copied pf/conf/templates/snort.conf to 
	pf/conf/templates/snort.conf.pre_snort-2.8
	Modified pf/conf/templates/snort.conf, pf/lib/pf/services.pm: snort
	fixes
	Removed -o flag to snort startup string (deprecated in snort)
	Updated default snort.conf
	Fixes #581, #846, #849;
	http://www.packetfence.org/mantis/view.php?id=581
	http://www.packetfence.org/mantis/view.php?id=846
	http://www.packetfence.org/mantis/view.php?id=849

2009-11-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Installation_Guide.odt: Added repositories in
	OS requirements section of the install guide:
	- CentOS need extras which is enabled by default
	- RedHat needs EPEL (extra packages for enterprise linux) which is 
	disabled by default

	* pf/bin/pfcmd, pf/conf/ui.conf
	pf/html/admin/configuration/switches.php, pf/lib/pf/pfcmd/pfcmd.pm:
	Fixed SNMPv3 configuration from pfcmd and Web admin interface
	The SNMPUserNameTrap parameter was not exposed. Thanks to
	Jean-Francois Laporte for reporting this. Fixes #853;
	http://www.packetfence.org/mantis/view.php?id=853
	